Choppy video playback when looping
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox127 | --- | fixed |
People
(Reporter: e412byoy7, Assigned: kinetik)
References
Details
Attachments
(1 file)
Steps to reproduce:
Watch any video on Tiktok.
Device: Moto G54
Actual results:
Video plays as expected on the first run, but on the second and succeeding loops, playback is choppy.
Expected results:
Videos should play in a loop without frame drops.
Regression of Bug 1872354 it seems
Comment 2•2 years ago
|
||
Hello, would you mind to following this instruction (it's for desktop, but we have about:logging on mobile as well) to capture a profiled result?
Thank you!
Comment 4•2 years ago
|
||
NI john and kinetik because this bug seems a regression caused by bug 1872354.
Comment 5•2 years ago
•
|
||
Adding dependency to bug 1894401, where the fix will be landed.
Comment 6•2 years ago
•
|
||
Also, moving bug 1872354 from Regressed by back to See Also. (The fix was cherry-picked there for firefox126.)
Updated•2 years ago
|
| Assignee | ||
Comment 7•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Comment 8•2 years ago
|
||
I'll land the Android AAudio fix for Fx127 here, since there's an unrelated Windows issue blocking the libcubeb update in bug 1894401.
Comment 10•2 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 11•2 years ago
|
||
(In reply to Alastor Wu [:alwu] from comment #2)
Hello, would you mind to following this instruction (it's for desktop, but we have
about:loggingon mobile as well) to capture a profiled result?
Thank you!
It doesn't work sadly, the dropdown list of "Logging preset:" is completely empty in Nightly 127.0a1, I am unable to select the "Media Playback" profile...
| Reporter | ||
Comment 12•2 years ago
|
||
Sadly have to reopen, still not fixed on nightly 127.0a1 (Build #2016019535), hg-0d84aa48c2d6+
(on Moto G54, Android 13).
:/
Comment 13•2 years ago
|
||
(In reply to Dan from comment #11)
It doesn't work sadly, the dropdown list of "Logging preset:" is completely empty in Nightly 127.0a1, I am unable to select the "Media Playback" profile...
Sorry to hear that, I've filed the bug 1896982 for the logging problem.
Comment 14•2 years ago
|
||
(In reply to Dan from comment #12)
Sadly have to reopen, still not fixed on nightly 127.0a1 (Build #2016019535), hg-0d84aa48c2d6+
(on Moto G54, Android 13).
:/
Kinetik, do you have any thought about this? Do we have another way to capture cubeb logs on Android? Thanks!
| Reporter | ||
Comment 15•2 years ago
|
||
(In reply to Alastor Wu [:alwu] from comment #13)
(In reply to Dan from comment #11)
It doesn't work sadly, the dropdown list of "Logging preset:" is completely empty in Nightly 127.0a1, I am unable to select the "Media Playback" profile...
Sorry to hear that, I've filed the bug 1896982 for the logging problem.
Ah, in that case it seems nobody moved bug 1896324 into the right Product/Component, argh. :P Marked duplicate.
Comment 16•2 years ago
|
||
Hi Dan, sorry to hear that the fix doesn't work on your phone. I tried Fenix Nightly Build#2016020495 on my Pixel 3 and couldn't reproduce the issue.
Could you please connect your phone via about:debugging and use Profile performance to record a profile with the Media preset, then upload it and share the link here? Thank you very much!
| Reporter | ||
Comment 17•2 years ago
|
||
Doesn't show up, I tried everything on that article, and https://developer.android.com/tools/adb doesn't explain how to install Android Debug Bridge from Android Tools on my computer, although this part in your linked page https://firefox-source-docs.mozilla.org/devtools-user/about_colon_debugging/#connecting-to-a-remote-device links to that article which should explain how to install it....... I'm getting super frustrated here!!
| Reporter | ||
Comment 18•2 years ago
|
||
NEVERMIND, I had to approve some weird thing on my phone, that step is NOT mentioned in https://firefox-source-docs.mozilla.org/devtools-user/about_colon_debugging/ it seems!!!
| Reporter | ||
Comment 19•2 years ago
|
||
I can't reproduce anymore on Build #2016020495, hg-45d7400ced7e+ , interesting! Did this patch only land after Build #2016019535, hg-0d84aa48c2d6+ or what just happened here?
| Assignee | ||
Comment 20•2 years ago
|
||
(In reply to Dan from comment #19)
I can't reproduce anymore on Build #2016020495, hg-45d7400ced7e+ , interesting! Did this patch only land after Build #2016019535, hg-0d84aa48c2d6+ or what just happened here?
Yes, the patch landed after 0d84aa48c2d6 (first nightly build with this patch was ee7969730d0c). Thanks for confirming the fix, I'll mark this bug as resolved.
Updated•2 years ago
|
| Reporter | ||
Comment 21•2 years ago
|
||
Ok would be nice if Pulsebot could be updated to include a date when it is expected to be published on Google Play, whenever Pulsebot posts about an Android bugfix push. That could've avoided all my debugging troubles (and of all other future bugzilla Android-bugs users)
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Description
•