Bug 1895471 - Uplift cubeb AAudio timing fix for reused streams.  r=cubeb-reviewers,pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D209774