media/libcubeb/test/test_triple_buffer.cpp
@@ -64,4 +64,7 @@ TEST(cubeb, triple_buffer)
   }
 
   t.join();
+
+  buffer.invalidate();
+  ASSERT_FALSE(buffer.updated());
 }
